--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@iobroker/adapter-core": "^2.6.7",
+    "imapflow": "^1.0.120",
     "mailparser": "^3.6.3",
     "node-imap": "^0.9.6"
   },
