--- a/package.json
+++ b/package.json
@@ -72,9 +72,10 @@
     "check": "tsc --noEmit -p tsconfig.check.json",
     "lint": "eslint .",
     "translate": "translate-adapter",
-    "release": "release-script patch --yes",
+    "release": "release-script",
+    "release-patch": "release-script patch --yes",
     "release-minor": "release-script minor --yes",
-    "release-major": "release-script major --yes"
+    "release-major": "release-script major --yes",
   },
   "bugs": {
     "url": "https://github.com/Lucky-ESA/ioBroker.imap/issues"
