--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "release": "release-script",
     "release-patch": "release-script patch --yes",
     "release-minor": "release-script minor --yes",
-    "release-major": "release-script major --yes",
+    "release-major": "release-script major --yes"
   },
   "bugs": {
     "url": "https://github.com/Lucky-ESA/ioBroker.imap/issues"
