--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -51,27 +51,26 @@ jobs:
                   # Uncomment the following line if your adapter cannot be installed using 'npm ci'
                   # install-command: 'npm install'
 
-# Deploys the final package to NPM
-  deploy:
+deploy:
     needs: [check-and-lint, adapter-tests]
 
     # Trigger this step only when a commit on any branch is tagged with a version number
     if: |
-      contains(github.event.head_commit.message, '[skip ci]') == false &&
-      github.event_name == 'push' &&
-      startsWith(github.ref, 'refs/tags/v')
+        contains(github.event.head_commit.message, '[skip ci]') == false &&
+        github.event_name == 'push' &&
+        startsWith(github.ref, 'refs/tags/v')
 
     runs-on: ubuntu-latest
 
     # Write permissions are required to create Github releases
     permissions:
-      contents: write
+        contents: write
 
     steps:
-      - uses: ioBroker/testing-action-deploy@v1
-        with:
-          node-version: '16.x'
-          # Uncomment the following line if your adapter cannot be installed using 'npm ci'
-          # install-command: 'npm install'
-          npm-token: ${{ secrets.NPM_TOKEN }}
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+        - uses: ioBroker/testing-action-deploy@v1
+          with:
+              node-version: "16.x"
+              # Uncomment the following line if your adapter cannot be installed using 'npm ci'
+              # install-command: 'npm install'
+              npm-token: ${{ secrets.NPM_TOKEN }}
+              github-token: ${{ secrets.GITHUB_TOKEN }}
