password input - check adapter active

--- a/admin/jsonConfig.json
+++ b/admin/jsonConfig.json
@@ -15,6 +15,7 @@
                     "newLine": true,
                     "sm": 12,
                     "noDelete": false,
+                    "hidden": "!_alive",
                     "type": "table",
                     "items": [
                         {
