--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node": ">= 16"
   },
   "dependencies": {
+    "@azure/msal-node": "^1.16.0",
     "@iobroker/adapter-core": "^2.6.7",
     "mailparser": "^3.6.3",
     "node-imap": "^0.9.6"
