--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -86,7 +86,7 @@ jobs:
 #          # Then uncomment and customize the following block:
 #          sentry: true
 #          sentry-token: ${{ secrets.SENTRY_AUTH_TOKEN }}
-#          sentry-project: "iobroker-e2-openwebif"
-#          sentry-version-prefix: "iobroker.e2-openwebif"
+#          sentry-project: "iobroker-imap"
+#          sentry-version-prefix: "iobroker.imap"
 #          # If your sentry project is linked to a GitHub repository, you can enable the following option
 #          # sentry-github-integration: true
